2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSObject.cs:
	* NSDictionary.cs:
	* plist-cil.csproj:
	  Implement NSDictionary

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSData.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implement NSData.

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSArray.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implements NSArray

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSDate.cs:
	* plist-cil.csproj:
	  Implemented NSDate

2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* plist-cil.csproj:
	  Implement UID

2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* NSSet.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implemented NSSet.

2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* NSString.cs:
	* plist-cil.csproj:
	  Implement NSString.

2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* NSNumber.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implement NSNumber.

2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* MyClass.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Pre-implement NSObject.

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* ChangeLog:
	* plist-cil.csproj:
	* Properties/AssemblyInfo.cs:
	  Initial commit

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* MyClass.cs:
	* plist-cil.csproj:
	* Properties/AssemblyInfo.cs:
	  Initial commit
