@@ -1,5 +1,11 @@
 2015-02-18  Natalia Portillo  <claunia@claunia.com>
 
+	* plist-cil.csproj:
+	* PropertyListFormatException.cs:
+	  Implement PropertyListFormatException
+
+2015-02-18  Natalia Portillo  <claunia@claunia.com>
+
 	* NSObject.cs:
 	* NSDictionary.cs:
 	* plist-cil.csproj:
